--- a/Lab1GTI/L1-3 Lauflicht mit LCD/Objects/_project.build_log.htm
+++ b/Lab1GTI/L1-3 Lauflicht mit LCD/Objects/_project.build_log.htm
@@ -27,9 +27,12 @@ Project File Date:  05/10/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+assembling startup_LPC17xx.s...
 compiling Lauflicht.c...
+compiling system_LPC17xx.c...
+compiling GLCD_LPC1700.c...
 linking...
-Program Size: Code=1276 RO-data=252 RW-data=24 ZI-data=608  
+Program Size: Code=4560 RO-data=5628 RW-data=32 ZI-data=608  
 ".\Objects\_project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -57,11 +60,11 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: Keil::Device:Startup:1.0.0
-      Source file:   Device\Source\ARM\startup_LPC17xx.s
       Include file:  Device\Include\LPC17xx.h
+      Source file:   Device\Source\ARM\startup_LPC17xx.s
       Source file:   Device\Source\system_LPC17xx.c
       Include file:  RTE_Driver\Config\RTE_Device.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
